# ping-pong-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  extra.txt  notes.txt
build-hopper-mpich/: test.slurm
build-hopper-openmpi/: test.slurm
build-hopper-openmpi+tempi/: test.slurm
build-hpctoolkit/: Makefile  cmake_install.cmake  hpc-toolkit.lsf  log.3106860.out  log.3162841.err  log.3162841.out  log.3180993.err  log.3180993.out  log.3181048.err  log.3181048.out  log.3181187.err  log.3181187.out  log.3181930.err  log.3181930.out  log.3187161.err  log.3187161.out  log.3187193.out  log.3187783.err  log.3187783.out  log.3187857.err  log.3187857.out  log.3187936.err  log.3187936.out  mods
build-lassen-spectrum/: setup-env.sh  setup.sh  spack.yaml
build-mvapich/: CMakeCache.txt  Makefile  cmake_install.cmake  hpc-toolkit.lsf  log.2889342.err  log.2889342.out  log.2889348.err  log.2889348.out  log.2889378.err  log.2889378.out  log.2889394.err  log.2889394.out  mods  mvapich.lsf  nvtx_pmpi.cpp  ping_pong  plot.py  plot.sh
build-mvapich2/: CMakeCache.txt  Makefile  cmake-gcc  cmake_install.cmake  compile_commands.json  hpc-toolkit.lsf  log.3084330.err  log.3084330.out  log.3089928.err  log.3089928.out  log.3089954.err  log.3089954.out  log.3090005.err  log.3090005.out  log.3090069.err  log.3090069.out  mods  mvapich.lsf  ping_pong  plot.sh  spack-mvapich.yaml
build-xlc/: CMakeCache.txt  Makefile  cmake-xlc.bak  cmake_install.cmake  hist  log.3277727.err  log.3300001.err  mods  nvtx_pmpi.cpp  ping_pong  spectrum-xlc.lsf
configs/llnl-lassen/: packages.yaml  setup-mvapich.sh  setup-spectrum.sh  spectrum.lsf
configs/unm-hopper/: spack.yaml
mvapich-nsys-out/: 0_10_x_cuda.nsys-rep  0_320_x_cuda.nsys-rep  0_640_x_cuda.nsys-rep  0_640_x_direct.nsys-rep  0_640_z_direct.nsys-rep  0_80_x_cuda.nsys-rep  0_80_x_direct.nsys-rep  1_640_x_cuda.nsys-rep  1_640_x_direct.nsys-rep  1_80_x_cuda.nsys-rep  1_80_x_direct.nsys-rep
mvapich-out/: 0_10_x_direct.prof  0_20_x_direct.prof  0_40_x_direct.prof  0_640_z_direct.prof  0_80_x_direct.prof  1_10_x_direct.prof  1_160_x_direct.prof  1_20_x_direct.prof  1_40_x_direct.prof  1_80_x_direct.prof  ping_pong
mvapich-out-tempi/: ping_pong
spectrum-nsys-out/: 0_160_x_cuda.nsys-rep  0_160_x_direct.nsys-rep  1_160_x_cuda.nsys-rep  1_160_x_direct.nsys-rep
spectrum-out/: ping_pong_cuda.dat.bak  ping_pong_direct.dat.bak
spectrum-xlc-fine-grain-out/: add_bytes.py  linear_regression.py  ping_pong  plot_data.py
src/: KokkosTypes.hpp  input.cpp  input.hpp  main.cpp  n_dimension.hpp  nvtx.w  nvtx_pmpi.c  ping_pong.cpp  ping_pong.hpp  plot.py  plot.sh  tmp.cpp
src/tmp/: ping_pong.cpp.bak  ping_pong_new.cpp  ping_pong_new.hpp
